<resources>
    <string name="app_name">supervisor_</string>
    <string name="textview">TextView</string>
    <string name="add_new_name">Add New Name</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="off_day">off Day</string>
    <string name="total_sales">Total Sales</string>
    <string name="user">User</string>
    <string name="sales">Sales</string>
    <string name="Name_App">Name App</string>
    <string name="Random">Random</string>
    <string name="Name_btn">Name btn</string>
    <string name="email">Email</string>
    <string name="add_New_Name">Add New Employee Info</string>
    <string name="Update_New_Name">Update Employee Info</string>
    <string name="Plan">Plan</string>
    <string name="Date">date</string>
    <string name="Day">day</string>
</resources>