<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddName">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_name"
                android:textSize="29sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <EditText
                android:id="@+id/NewName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name"
                android:inputType="text"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/NewUser"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/user"
                android:inputType="text"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/NewSales"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/sales"
                android:inputType="text"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/NewDayOff"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/off_day"
                android:inputType="text"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/AddNewEmployee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_name"
                android:layout_marginTop="50dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>