<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/PlanTayp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentStart="true"
            android:maxLines="1"
            android:layout_toStartOf="@+id/Date"/>

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentEnd="true"
            android:maxLines="1"
            />


        <TextView
            android:id="@+id/DayOff_Text_viewList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Date"
            android:maxLines="1"
            android:text="@string/Day"
            android:layout_alignParentEnd="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>