<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/Name_Text_viewList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentStart="true"
            android:maxLines="1"
            android:layout_toStartOf="@+id/User_Text_viewList"/>

        <TextView
            android:id="@+id/User_Text_viewList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentEnd="true"
            android:maxLines="1"
            />


        <TextView
            android:id="@+id/DayOff_Text_viewList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Name_Text_viewList"
            android:maxLines="1"
            android:text="@string/off_day"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>